--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -164,10 +164,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\WebSocket4Net.dll</HintPath>
     </Reference>
-    <Reference Include="Zazzles, Version=1.0.5764.34033, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\libs\Zazzles.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FOGSystemService.cs" />
@@ -183,6 +179,10 @@
     <None Include="Properties\app.manifest" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\zazzles\Zazzles\Zazzles.csproj">
+      <Project>{4cacd1de-ef40-4db9-8ee0-9dcb90c359e7}</Project>
+      <Name>Zazzles</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Modules\Modules.csproj">
       <Project>{D6372438-04EA-439C-8F7C-EE06446D9284}</Project>
       <Name>Modules</Name>
