--- a/Modules/packages.config
+++ b/Modules/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.3.1.0" targetFramework="net40" />
   <package id="Common.Logging.Core" version="3.3.1.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
   <package id="Quartz" version="2.4.1" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
