--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -178,6 +178,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ALOStrings.pt.resx</DependentUpon>
     </Compile>
+    <Compile Include="AutoLogOut\ALOStrings.cs.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ALOStrings.cs.resx</DependentUpon>
+    </Compile>
     <Compile Include="DataContracts\AutoLogOut.cs" />
     <Compile Include="DataContracts\SnapinConfigFile.cs" />
     <Compile Include="DisplayManager\Display.cs" />
@@ -205,6 +210,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataContracts\Snapin.cs" />
     <Compile Include="DataContracts\SnapinClient.cs" />
+    <Compile Include="DataContracts\TaskReboot.cs" />
+    <Compile Include="SnapinClient\SnapinClient.cs" />
+    <Compile Include="SnapinClient\SnapinStrings.cs.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SnapinStrings.cs.resx</DependentUpon>
+    </Compile>
     <Compile Include="SnapinClient\SnapinStrings.hu.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -215,8 +227,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SnapinStrings.pt.resx</DependentUpon>
     </Compile>
-    <Compile Include="SnapinClient\SnapinClient.cs" />
-    <Compile Include="DataContracts\TaskReboot.cs" />
     <Compile Include="SnapinClient\SnapinStrings.no.Designer.cs">
       <DependentUpon>SnapinStrings.no.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -296,6 +306,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ALOStrings.pt.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="AutoLogOut\ALOStrings.cs.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ALOStrings.cs.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="SnapinClient\SnapinStrings.hu.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SnapinStrings.hu.Designer.cs</LastGenOutput>
@@ -327,6 +341,10 @@
     <EmbeddedResource Include="SnapinClient\SnapinStrings.pt.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SnapinStrings.pt.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SnapinClient\SnapinStrings.cs.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>SnapinStrings.cs.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="SnapinClient\SnapinStrings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
