--- a/Debugger/app.config
+++ b/Debugger/app.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="superSocket" type="SuperSocket.SocketEngine.Configuration.SocketServiceConfig, SuperSocket.SocketEngine" />
+    <section name="superSocket" type="SuperSocket.SocketEngine.Configuration.SocketServiceConfig, SuperSocket.SocketEngine"/>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
-    <add key="ServiceName" value="SuperWebSocket" />
+    <add key="ServiceName" value="SuperWebSocket"/>
   </appSettings>
   <superSocket>
     <servers>
@@ -15,34 +15,34 @@
       </server>
     </servers>
     <serverTypes>
-      <add name="SuperWebSocket" type="SuperWebSocket.WebSocketServer, SuperWebSocket" />
+      <add name="SuperWebSocket" type="SuperWebSocket.WebSocketServer, SuperWebSocket"/>
     </serverTypes>
   </superSocket>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="SuperSocket.SocketBase" publicKeyToken="6c80000676988ebb" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.6.4.0" newVersion="1.6.4.0" />
+        <assemblyIdentity name="SuperSocket.SocketBase" publicKeyToken="6c80000676988ebb" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.6.4.0" newVersion="1.6.4.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="SuperSocket.Common" publicKeyToken="6c80000676988ebb" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.6.4.0" newVersion="1.6.4.0" />
+        <assemblyIdentity name="SuperSocket.Common" publicKeyToken="6c80000676988ebb" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.6.4.0" newVersion="1.6.4.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0" />
+        <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0" />
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
